Fixed Upcoming Dates photo on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -21149,18 +21149,24 @@ body.modal-open {
       height: 100%;
       img {
         width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        object-fit: cover;
-        object-position: center;
+        height: auto;
+        @include tab {
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          object-fit: cover;
+          object-position: center;
+        }
       }
     }
   }
   .flexcol.images-2 {
     figure {
-      padding-bottom: 50%;
+      padding-bottom: 65%;
+      @include tab {
+        padding-bottom: 50%;
+      }
       img {
         width: 100%;
         height: 100%;
@@ -21174,7 +21180,10 @@ body.modal-open {
   }
   .flexcol.images-3 {
     figure {
-      padding-bottom: 50%;
+      padding-bottom: 65%;
+      @include tab {
+        padding-bottom: 50%;
+      }
       img {
         width: 100%;
         height: 100%;
